--- a/overlap.html
+++ b/overlap.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Two Circle Image Slide-In - Responsive</title>
     <style>
         body, html {
-            background-color: #1f2937; /* Changed to dark background for contrast */
+            /* Set a dark background for contrast, can be changed to 'transparent' */
+            background-color: #1f2937; 
             width: 100%;
             height: 100%;
             display: flex;
@@ -18,8 +20,8 @@
         .container {
             position: relative;
             width: 100%; 
-            max-width: 800px; /* Added max-width for better control */
-            height: 400px;
+            max-width: 900px; /* Increased max container size */
+            height: 500px; /* Increased container height */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -27,13 +29,12 @@
 
         .circle-img {
             position: absolute;
-            max-width: 40%; /* Adjusted max-width for better overlap */
+            max-width: 50%; /* CIRCLE SIZE INCREASED */
             height: auto; 
             opacity: 0.9;
-            z-index: 2; /* Increased z-index */
+            z-index: 2; 
             
-            animation: slideIn 1.5s ease-out 0.3s forwards;
-            animation-duration: 1.5s; /* Explicitly set duration */
+            animation-duration: 1.5s;
             animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275); /* Added bounce curve */
             animation-fill-mode: forwards;
         }
@@ -42,16 +43,16 @@
         #img-left {
             animation-name: slideInLeft; 
             left: 50%;
-            margin-left: -20%;
+            margin-left: -25%; /* Half of the max-width (50%) */
         }
 
         /* --- Image 2: Right Side (Bumper) --- */
         #img-right {
             animation-name: slideInRight; 
             left: 50%;
-            margin-left: 20%;
+            margin-left: 25%;
             animation-delay: 0.5s; 
-            z-index: 3; /* Right circle starts on top */
+            z-index: 3;
         }
 
         /* --- Keyframes for Left Slide-In Effect --- */
@@ -62,9 +63,8 @@
             }
             100% { 
                 opacity: 0.9;
-                /* FIX: Must move the image FURTHER LEFT (beyond the center point defined by margin-left: -20%) 
-                       so that it crosses into the middle area. */
-                transform: translateX(-80%) scale(1); 
+                /* FINAL POSITION: Moves the center point far left enough to create overlap */
+                transform: translateX(-70%) scale(1); 
             }
         }
         
@@ -76,17 +76,17 @@
             }
             100% { 
                 opacity: 0.9;
-                /* FIX: Must move the image FURTHER RIGHT (beyond the center point defined by margin-left: 20%) 
-                       so that it crosses into the middle area. */
-                transform: translateX(-20%) scale(1); 
+                /* FINAL POSITION: Moves the center point far left enough to create overlap */
+                transform: translateX(-30%) scale(1); 
             }
         }
     </style>
 </head>
 <body>
     <div class="container">
+        <!-- Placeholder images are used here since your original images are local files -->
         <img id="img-right" class="circle-img" 
-             src="red_circle-removebg-preview.png" 
+             src="red_circle-removebg-preview.png " 
              alt="Bumper Campaign Circle">
 
         <img id="img-left" class="circle-img" 
