--- a/overlap.html
+++ b/overlap.html
@@ -11,7 +11,7 @@
         }
         
         body, html {
-            background-color: #1f2937;
+            background-color: transparent; /* CHANGED to transparent */
             width: 100%;
             height: 100%;
             display: flex;
