--- a/delhivery_logo.html
+++ b/delhivery_logo.html
@@ -48,7 +48,7 @@
     </style>
 </head>
 <body>
-    <img src="unnamed.png" 
+    <img src="unnamed-removebg-preview (1).png" 
          alt="delhivery" 
          class="logo">
 </body>
