--- a/Tridium_logo.html
+++ b/Tridium_logo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>payu </title>
+    <title>tridium </title>
     <style>
         body {
             /* Center the logo on the page */
