--- a/Tridium_logo.html
+++ b/Tridium_logo.html
@@ -48,7 +48,7 @@
     </style>
 </head>
 <body>
-    <img src="tridium-logo-vector-removebg-preview.png" 
+    <img src="tridium_new_logo.png" 
          alt="tridium-logo-vector " 
          class="logo">
 </body>
