--- a/tata_aig_health_logo.html
+++ b/tata_aig_health_logo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Animated Brand Logo - AMF </title>
+    <title>Animated Brand Logo - TAIG </title>
     <style>
         body {
             /* Center the logo on the page */
@@ -49,7 +49,7 @@
 </head>
 <body>
     <img src="R-removebg-preview (1).png" 
-         alt="Tata AIG Health" 
+         alt="TATA AIG HEALTH" 
          class="logo">
 </body>
 </html>
