--- a/Tata AIG - Bengali - Bumper.html
+++ b/Tata AIG - Bengali - Bumper.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TN Tamil</title>
+    <title>Tata AIG - Bengali - Bumper</title>
     <style>
         /* CRITICAL: Aggressive CSS to eliminate all margins/padding from the iframe */
         body, html {
