Update Tata AIG - Telugu - Bumper.html

--- a/Tata AIG - Telugu - Bumper.html
+++ b/Tata AIG - Telugu - Bumper.html
@@ -39,7 +39,7 @@
 <body>
     <video 
         id="video-player" 
-        src="Tata AIG - Telugu - Bumper.mp4" 
+        src="TATA AIG _Telugu_Bumper2.mp4" 
         autoplay 
         muted 
         playsinline
