--- a/tata_aig_health_name.html
+++ b/tata_aig_health_name.html
@@ -65,7 +65,7 @@
 
     <script>
         // The title string
-        const titleText = "Tata AIG Health Nov 25";
+        const titleText = "TATA AIG Health - Media Analytics Console 2025";
         const titleElement = document.getElementById('animated-title');
         
         // Settings for different animation speeds
