--- a/dwtc_logo.html
+++ b/dwtc_logo.html
@@ -1,53 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Animated Brand Logo - DWTC</title>
+    <title>Animated Brand Logo -Canora UPL </title>
     <style>
-        body, html {
-            /* Ensures transparency and positioning for Looker Studio */
-            background-color: transparent !important;
+        body {
+            /* Center the logo on the page */
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh; 
             margin: 0;
+            background-color: #ffffff;
             overflow: hidden; 
         }
 
         .logo {
-            /* --- INCREASED SIZE HERE --- */
-            width: 200 px; /* INCREASED SIZE */
+            /* Set a manageable size for the logo */
+            width: 200px; /* Adjust size as needed */
             height: auto;
             display: block; 
             
             /* --- Animation Properties --- */
-            animation: slideUp-once 1.5s ease-out 0.5s 1 forwards; 
+            /* Play Once (1) and Stay at End Position (forwards) */
+            animation: zoom-in-once 2s ease-out 0.5s 1 forwards; 
+            
+            /* Start invisible before animation begins */
             opacity: 0; 
-            transform: translateY(100%); 
         }
 
-        /* --- Keyframes for the Slide-Up Animation --- */
-        @keyframes slideUp-once {
+        /* --- Keyframes for the Animation --- */
+        @keyframes zoom-in-once {
             0% {
                 opacity: 0; 
-                transform: translateY(100%); /* Start completely off-screen (down) */
+                transform: scale(2.0); /* Start zoomed in */
             }
             10% {
                 opacity: 1; /* Fade in quickly */
             }
             80% {
-                transform: translateY(-5%); /* Slight overshoot for a nice bounce effect */
+                transform: scale(1.05); /* Slight overshoot for a nice bounce */
             }
             100% {
                 opacity: 1; 
-                transform: translateY(0); /* Settle at its final, visible position */
+                transform: scale(1.0); /* Settle at normal size */
             }
         }
     </style>
 </head>
 <body>
-    <img src="DWTC-Logo-removebg-preview.png" 
-         alt="DWTC Brand logo" 
+    <img src="UPL.png" 
+         alt="DWTC-Logo-removebg-preview.png" 
          class="logo">
 </body>
 </html>
