--- a/dwtc_logo.html
+++ b/dwtc_logo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Animated Brand Logo -Canora UPL </title>
+    <title>Animated Brand Logo -DWTC UPL </title>
     <style>
         body {
             /* Center the logo on the page */
@@ -48,7 +48,7 @@
     </style>
 </head>
 <body>
-    <img src="UPL.png" 
+    <img src="DWTC-Logo-removebg-preview.png" 
          alt="DWTC-Logo-removebg-preview.png" 
          class="logo">
 </body>
